--- a/introduction-angular-for-dotnet/css/inputs.css
+++ b/introduction-angular-for-dotnet/css/inputs.css
@@ -10,3 +10,7 @@ input[type=text]:focus {
   box-shadow: 0 0 15px rgba(81, 203, 238, 1);
   border: 1px solid rgba(81, 203, 238, 1);
 }
+
+.orange {
+  color: orange;
+}
