--- a/introduction-angular-for-dotnet/css/inputs.css
+++ b/introduction-angular-for-dotnet/css/inputs.css
@@ -11,6 +11,19 @@ input[type=text]:focus {
   border: 1px solid rgba(81, 203, 238, 1);
 }
 
+input[type=number] {
+  font-size: 1.2em;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border: 1px solid grey;
+}
+
+input[type=number]:focus {
+  box-shadow: 0 0 15px rgba(81, 203, 238, 1);
+  border: 1px solid rgba(81, 203, 238, 1);
+}
+
 input[type=checkbox] {
   /* Double-sized Checkboxes */
   -ms-transform: scale(2); /* IE */
@@ -30,6 +43,22 @@ input[type=submit] {
   border-radius: 8px;
   font-size: 43px;
   color: #fff;
+}
+
+input[type=button] {
+  display: inline-block;
+  margin: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  font-size: 43px;
+  color: #fff;
+}
+
+select {
+  font-size: 43px;
 }
 
 .orange {
